Started rework using TelePlusPlus
- renamed Main to AWP (also changed plugin.yml)
- refactored doWarp, using the TelePlusPlus Plugin
- refactored finding warp points
TODO:
- changing/setting player direction/view angle
- making warp points private/public and manage inviting

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="awp" default="dist" basedir=".">
-    <property name="bukkit.jar" location="/home/minecraft/currbukkit.jar" />
-    <property name="pluginpath" location="/home/minecraft/plugins" />
+    <property name="bukkit.jar" location="lib/craftbukkit-1.2.5-R4.0.jar" />
+    <property name="pluginpath" location="target/minecraft/plugins" />
     <property name="pluginname" value="awp" />
     <property name="src"  location="src"  />
     <property name="dist" location="dist" />
