--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <project name="awp" default="dist" basedir=".">
-    <property name="bukkit.jar" location="lib/craftbukkit-1.2.5-R4.0.jar" />
+    <property name="bukkit.jar" location="../lib/craftbukkit-1.2.5-R4.0.jar" />
     <property name="pluginpath" location="target/minecraft/plugins" />
     <property name="pluginname" value="awp" />
     <property name="src"  location="src"  />
